--- a/Tagging/testing.ipynb
+++ b/Tagging/testing.ipynb
@@ -8,14 +8,210 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting torch\n",
+      "  Using cached torch-2.6.0-cp310-cp310-manylinux1_x86_64.whl.metadata (28 kB)\n",
+      "Collecting transformers\n",
+      "  Downloading transformers-4.50.2-py3-none-any.whl.metadata (39 kB)\n",
+      "Collecting filelock (from torch)\n",
+      "  Using cached filelock-3.18.0-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in /yunity/arusty/SoundScribe/.venv/lib/python3.10/site-packages (from torch) (4.13.0)\n",
+      "Collecting networkx (from torch)\n",
+      "  Using cached networkx-3.4.2-py3-none-any.whl.metadata (6.3 kB)\n",
+      "Collecting jinja2 (from torch)\n",
+      "  Using cached jinja2-3.1.6-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting fsspec (from torch)\n",
+      "  Using cached fsspec-2025.3.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting nvidia-cuda-nvrtc-cu12==12.4.127 (from torch)\n",
+      "  Using cached nvidia_cuda_nvrtc_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
+      "Collecting nvidia-cuda-runtime-cu12==12.4.127 (from torch)\n",
+      "  Using cached nvidia_cuda_runtime_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
+      "Collecting nvidia-cuda-cupti-cu12==12.4.127 (from torch)\n",
+      "  Using cached nvidia_cuda_cupti_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.6 kB)\n",
+      "Collecting nvidia-cudnn-cu12==9.1.0.70 (from torch)\n",
+      "  Using cached nvidia_cudnn_cu12-9.1.0.70-py3-none-manylinux2014_x86_64.whl.metadata (1.6 kB)\n",
+      "Collecting nvidia-cublas-cu12==12.4.5.8 (from torch)\n",
+      "  Using cached nvidia_cublas_cu12-12.4.5.8-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
+      "Collecting nvidia-cufft-cu12==11.2.1.3 (from torch)\n",
+      "  Using cached nvidia_cufft_cu12-11.2.1.3-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
+      "Collecting nvidia-curand-cu12==10.3.5.147 (from torch)\n",
+      "  Using cached nvidia_curand_cu12-10.3.5.147-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
+      "Collecting nvidia-cusolver-cu12==11.6.1.9 (from torch)\n",
+      "  Using cached nvidia_cusolver_cu12-11.6.1.9-py3-none-manylinux2014_x86_64.whl.metadata (1.6 kB)\n",
+      "Collecting nvidia-cusparse-cu12==12.3.1.170 (from torch)\n",
+      "  Using cached nvidia_cusparse_cu12-12.3.1.170-py3-none-manylinux2014_x86_64.whl.metadata (1.6 kB)\n",
+      "Collecting nvidia-cusparselt-cu12==0.6.2 (from torch)\n",
+      "  Using cached nvidia_cusparselt_cu12-0.6.2-py3-none-manylinux2014_x86_64.whl.metadata (6.8 kB)\n",
+      "Collecting nvidia-nccl-cu12==2.21.5 (from torch)\n",
+      "  Using cached nvidia_nccl_cu12-2.21.5-py3-none-manylinux2014_x86_64.whl.metadata (1.8 kB)\n",
+      "Collecting nvidia-nvtx-cu12==12.4.127 (from torch)\n",
+      "  Using cached nvidia_nvtx_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.7 kB)\n",
+      "Collecting nvidia-nvjitlink-cu12==12.4.127 (from torch)\n",
+      "  Using cached nvidia_nvjitlink_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl.metadata (1.5 kB)\n",
+      "Collecting triton==3.2.0 (from torch)\n",
+      "  Using cached triton-3.2.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (1.4 kB)\n",
+      "Collecting sympy==1.13.1 (from torch)\n",
+      "  Using cached sympy-1.13.1-py3-none-any.whl.metadata (12 kB)\n",
+      "Collecting mpmath<1.4,>=1.1.0 (from sympy==1.13.1->torch)\n",
+      "  Using cached mpmath-1.3.0-py3-none-any.whl.metadata (8.6 kB)\n",
+      "Collecting huggingface-hub<1.0,>=0.26.0 (from transformers)\n",
+      "  Downloading huggingface_hub-0.29.3-py3-none-any.whl.metadata (13 kB)\n",
+      "Collecting numpy>=1.17 (from transformers)\n",
+      "  Downloading numpy-2.2.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (62 kB)\n",
+      "Requirement already satisfied: packaging>=20.0 in /yunity/arusty/SoundScribe/.venv/lib/python3.10/site-packages (from transformers) (24.2)\n",
+      "Collecting pyyaml>=5.1 (from transformers)\n",
+      "  Downloading PyYAML-6.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (2.1 kB)\n",
+      "Collecting regex!=2019.12.17 (from transformers)\n",
+      "  Downloading regex-2024.11.6-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (40 kB)\n",
+      "Collecting requests (from transformers)\n",
+      "  Downloading requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Collecting tokenizers<0.22,>=0.21 (from transformers)\n",
+      "  Downloading tokenizers-0.21.1-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (6.8 kB)\n",
+      "Collecting safetensors>=0.4.3 (from transformers)\n",
+      "  Downloading safetensors-0.5.3-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.8 kB)\n",
+      "Collecting tqdm>=4.27 (from transformers)\n",
+      "  Downloading tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
+      "Collecting MarkupSafe>=2.0 (from jinja2->torch)\n",
+      "  Using cached MarkupSafe-3.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (4.0 kB)\n",
+      "Collecting charset-normalizer<4,>=2 (from requests->transformers)\n",
+      "  Downloading charset_normalizer-3.4.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (35 kB)\n",
+      "Collecting idna<4,>=2.5 (from requests->transformers)\n",
+      "  Downloading idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
+      "Collecting urllib3<3,>=1.21.1 (from requests->transformers)\n",
+      "  Downloading urllib3-2.3.0-py3-none-any.whl.metadata (6.5 kB)\n",
+      "Collecting certifi>=2017.4.17 (from requests->transformers)\n",
+      "  Downloading certifi-2025.1.31-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Using cached torch-2.6.0-cp310-cp310-manylinux1_x86_64.whl (766.7 MB)\n",
+      "Using cached nvidia_cublas_cu12-12.4.5.8-py3-none-manylinux2014_x86_64.whl (363.4 MB)\n",
+      "Using cached nvidia_cuda_cupti_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (13.8 MB)\n",
+      "Using cached nvidia_cuda_nvrtc_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (24.6 MB)\n",
+      "Using cached nvidia_cuda_runtime_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (883 kB)\n",
+      "Using cached nvidia_cudnn_cu12-9.1.0.70-py3-none-manylinux2014_x86_64.whl (664.8 MB)\n",
+      "Using cached nvidia_cufft_cu12-11.2.1.3-py3-none-manylinux2014_x86_64.whl (211.5 MB)\n",
+      "Using cached nvidia_curand_cu12-10.3.5.147-py3-none-manylinux2014_x86_64.whl (56.3 MB)\n",
+      "Using cached nvidia_cusolver_cu12-11.6.1.9-py3-none-manylinux2014_x86_64.whl (127.9 MB)\n",
+      "Using cached nvidia_cusparse_cu12-12.3.1.170-py3-none-manylinux2014_x86_64.whl (207.5 MB)\n",
+      "Using cached nvidia_cusparselt_cu12-0.6.2-py3-none-manylinux2014_x86_64.whl (150.1 MB)\n",
+      "Using cached nvidia_nccl_cu12-2.21.5-py3-none-manylinux2014_x86_64.whl (188.7 MB)\n",
+      "Using cached nvidia_nvjitlink_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (21.1 MB)\n",
+      "Using cached nvidia_nvtx_cu12-12.4.127-py3-none-manylinux2014_x86_64.whl (99 kB)\n",
+      "Using cached sympy-1.13.1-py3-none-any.whl (6.2 MB)\n",
+      "Using cached triton-3.2.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (253.1 MB)\n",
+      "Downloading transformers-4.50.2-py3-none-any.whl (10.2 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.2/10.2 MB\u001b[0m \u001b[31m65.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading huggingface_hub-0.29.3-py3-none-any.whl (468 kB)\n",
+      "Using cached fsspec-2025.3.0-py3-none-any.whl (193 kB)\n",
+      "Downloading numpy-2.2.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (16.4 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m16.4/16.4 MB\u001b[0m \u001b[31m94.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading PyYAML-6.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (751 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m751.2/751.2 kB\u001b[0m \u001b[31m26.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading regex-2024.11.6-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (781 kB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m781.7/781.7 kB\u001b[0m \u001b[31m27.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading safetensors-0.5.3-cp38-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (471 kB)\n",
+      "Downloading tokenizers-0.21.1-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.0 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.0/3.0 MB\u001b[0m \u001b[31m76.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
+      "Using cached filelock-3.18.0-py3-none-any.whl (16 kB)\n",
+      "Using cached jinja2-3.1.6-py3-none-any.whl (134 kB)\n",
+      "Using cached networkx-3.4.2-py3-none-any.whl (1.7 MB)\n",
+      "Downloading requests-2.32.3-py3-none-any.whl (64 kB)\n",
+      "Downloading certifi-2025.1.31-py3-none-any.whl (166 kB)\n",
+      "Downloading charset_normalizer-3.4.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (146 kB)\n",
+      "Downloading idna-3.10-py3-none-any.whl (70 kB)\n",
+      "Using cached MarkupSafe-3.0.2-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (20 kB)\n",
+      "Using cached mpmath-1.3.0-py3-none-any.whl (536 kB)\n",
+      "Downloading urllib3-2.3.0-py3-none-any.whl (128 kB)\n",
+      "Installing collected packages: triton, nvidia-cusparselt-cu12, mpmath, urllib3, tqdm, sympy, safetensors, regex, pyyaml, nvidia-nvtx-cu12, nvidia-nvjitlink-cu12, nvidia-nccl-cu12, nvidia-curand-cu12, nvidia-cufft-cu12, nvidia-cuda-runtime-cu12, nvidia-cuda-nvrtc-cu12, nvidia-cuda-cupti-cu12, nvidia-cublas-cu12, numpy, networkx, MarkupSafe, idna, fsspec, filelock, charset-normalizer, certifi, requests, nvidia-cusparse-cu12, nvidia-cudnn-cu12, jinja2, nvidia-cusolver-cu12, huggingface-hub, torch, tokenizers, transformers\n",
+      "Successfully installed MarkupSafe-3.0.2 certifi-2025.1.31 charset-normalizer-3.4.1 filelock-3.18.0 fsspec-2025.3.0 huggingface-hub-0.29.3 idna-3.10 jinja2-3.1.6 mpmath-1.3.0 networkx-3.4.2 numpy-2.2.4 nvidia-cublas-cu12-12.4.5.8 nvidia-cuda-cupti-cu12-12.4.127 nvidia-cuda-nvrtc-cu12-12.4.127 nvidia-cuda-runtime-cu12-12.4.127 nvidia-cudnn-cu12-9.1.0.70 nvidia-cufft-cu12-11.2.1.3 nvidia-curand-cu12-10.3.5.147 nvidia-cusolver-cu12-11.6.1.9 nvidia-cusparse-cu12-12.3.1.170 nvidia-cusparselt-cu12-0.6.2 nvidia-nccl-cu12-2.21.5 nvidia-nvjitlink-cu12-12.4.127 nvidia-nvtx-cu12-12.4.127 pyyaml-6.0.2 regex-2024.11.6 requests-2.32.3 safetensors-0.5.3 sympy-1.13.1 tokenizers-0.21.1 torch-2.6.0 tqdm-4.67.1 transformers-4.50.2 triton-3.2.0 urllib3-2.3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install torch transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/yunity/arusty/SoundScribe/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Some weights of DistilBertForSequenceClassification were not initialized from the model checkpoint at distilbert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight', 'pre_classifier.bias', 'pre_classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted Class: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import DistilBertTokenizer, DistilBertForSequenceClassification\n",
+    "import torch\n",
+    "\n",
+    "# Load the tokenizer and model\n",
+    "MODEL_NAME = \"distilbert-base-uncased\"\n",
+    "tokenizer = DistilBertTokenizer.from_pretrained(MODEL_NAME)\n",
+    "model = DistilBertForSequenceClassification.from_pretrained(MODEL_NAME, num_labels=2)  # Example: Binary classification\n",
+    "\n",
+    "def predict(text):\n",
+    "    \"\"\"Takes a string input and predicts a label using DistilBERT.\"\"\"\n",
+    "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, padding=True, max_length=512)\n",
+    "\n",
+    "    # Run inference\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**inputs)\n",
+    "\n",
+    "    logits = outputs.logits\n",
+    "    predicted_class = torch.argmax(logits, dim=1).item()\n",
+    "    \n",
+    "    return predicted_class\n",
+    "\n",
+    "# Example usage\n",
+    "text = \"This is a test sentence to classify.\"\n",
+    "prediction = predict(text)\n",
+    "\n",
+    "print(f\"Predicted Class: {prediction}\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
